docs(day07): update Day 07 reference guide with JMM memory model, volatile barriers, atomic CAS, and virtual threads